Updates from Overleaf

--- a/kththesis/examplethesis.tex
+++ b/kththesis/examplethesis.tex
@@ -1089,7 +1089,7 @@ The curve of the CPU usage measured by Chrome's CPU sampling is closest to the c
     
     Since emulators can provide easy access to a large range of Android devices, their use was considered for the final experiments. The CPU, of which the usage is a key metrics used to evaluate the performance of the applications, is a hardware difficult to emulate \cite{cpu_emulator}. Thus, it is important to test the emulators against a physical device before using them in CPU-related experiments.
 
-As was presented in the background, only a few Android emulators try to simulate accurately the hardware capabilities of the emulated device \todo[color=green]{What does that mean?} and not improve them. Only 3 were identified and tested: Android Emulator, Genymotion and Visual Studio Android Emulator. As was explained previously, the metrics used to compare the performance of the emulators were the CPU usage using \textit{dumpsys cpuinfo}, the total RAM used using \textit{dumpsys meminfo} and the percentage of janky frames using \textit{dumpsys gfxinfo}. The measures were taken while the devices ran the same application that changed a text every few milliseconds. No human interaction was necessary. The results presented in \autoref{tab:emulators_test} are the average of 110 measurements.
+As was presented in the background, only a few Android emulators try to simulate accurately the hardware capabilities of the emulated device and not improve them. Only 3 were identified and tested: Android Emulator, Genymotion and Visual Studio Android Emulator. As was explained previously, the metrics used to compare the performance of the emulators were the CPU usage using \textit{dumpsys cpuinfo}, the total RAM used using \textit{dumpsys meminfo} and the percentage of janky frames using \textit{dumpsys gfxinfo}. The measures were taken while the devices ran the same application that changed a text every few milliseconds. No human interaction was necessary. The results presented in \autoref{tab:emulators_test} are the average of 110 measurements.
 
 \begin{table}[!ht]
     \resizebox{\textwidth}{!}{
