--- a/kththesis/references.bib
+++ b/kththesis/references.bib
@@ -500,6 +500,12 @@
     year={2019},
 }
 
+@online{app_smoothness,
+    title={Test UI performance},
+    url={https://developer.android.com/training/testing/performance},
+    year={2020}
+}
+
 @online{chrome_rendering,
     title={The Rendering Critical Path},
     url={https://www.chromium.org/developers/the-rendering-critical-path},
